# devdash

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  prompt.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: adding-tools.md  architecture.md  index.html  installation.md  usage.md
src/devdash/: __init__.py  __main__.py  app.py  config.py  plugin_loader.py  storage.py
src/devdash/tools/: __init__.py  base.py  base64_tool.py  color_tool.py  cron_tool.py  hash_tool.py  json_tool.py  jwt_tool.py  lorem_tool.py  password_tool.py  regex_tool.py  timestamp_tool.py  url_tool.py  uuid_tool.py
src/devdash/ui/: __init__.py  notifications.py  windows.py
src/gadgetbox/: __init__.py  __main__.py  app.py  clipboard.py  config.py  plugin_loader.py  storage.py
src/gadgetbox/tools/: __init__.py  base.py  base64_tool.py  color_tool.py  cron_tool.py  hash_tool.py  json_tool.py  jwt_tool.py  lorem_tool.py  password_tool.py  regex_tool.py  timestamp_tool.py  url_tool.py  uuid_tool.py
src/gadgetbox/ui/: __init__.py  notifications.py  windows.py
tests/: conftest.py  test_app.py  test_clipboard.py  test_config.py  test_plugin_loader.py
tests/test_tools/: test_base64_tool.py  test_color_tool.py  test_cron_tool.py  test_hash_tool.py  test_json_tool.py  test_jwt_tool.py  test_lorem_tool.py  test_password_tool.py  test_regex_tool.py  test_timestamp_tool.py  test_url_tool.py  test_uuid_tool.py
