[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gadgetbox"
version = "0.2.0"
description = "Cross-platform system tray developer utilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "GadgetBox Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pystray>=0.19.0",
    "Pillow>=9.0.0",
    "plyer>=2.1.0",
    "pyperclip>=1.8.0",
    "PyJWT>=2.8.0",
    "pyyaml>=6.0",
    "croniter>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "build",
    "twine",
]

[project.scripts]
gadgetbox = "gadgetbox.__main__:main"

[project.urls]
Homepage = "https://github.com/vamsi876/gadgetbox"
Repository = "https://github.com/vamsi876/gadgetbox"
Issues = "https://github.com/vamsi876/gadgetbox/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/gadgetbox --cov-report=term-missing"
